k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamlit-futures
spec:
  selector:
    app: streamlit-futures
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8501
  type: ClusterIP
